tests/types/errors/mutate_through_let_index.mochi
let xs: list<int> = [1, 2, 3]
xs[0] = 5
